Memory leak in DCmdArgument<char*>::parse_value

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 21
    • Affects Version/s: 21
    • Component/s: hotspot
    • b12

      Direct leak of 3 byte(s) in 1 object(s) allocated from:
          #0 0x7fcbd10b89cf in __interceptor_malloc ../../../../src/libsanitizer/asan/asan_malloc_linux.cpp:69
          #1 0x7fcbcd6aefbf in os::malloc(unsigned long, MEMFLAGS, NativeCallStack const&) src/hotspot/share/runtime/os.cpp:654
          #2 0x7fcbcb21dd17 in AllocateHeap(unsigned long, MEMFLAGS, NativeCallStack const&, AllocFailStrategy::AllocFailEnum) src/hotspot/share/memory/allocation.cpp:42
          #3 0x7fcbcb21dd17 in AllocateHeap(unsigned long, MEMFLAGS, AllocFailStrategy::AllocFailEnum) src/hotspot/share/memory/allocation.cpp:52
          #4 0x7fcbcbf7cf17 in DCmdArgument<char*>::parse_value(char const*, unsigned long, JavaThread*) src/hotspot/share/services/diagnosticArgument.cpp:186
          #5 0x7fcbcbf7cf17 in DCmdArgument<char*>::init_value(JavaThread*) src/hotspot/share/services/diagnosticArgument.cpp:194
          #6 0x7fcbcbfa9d92 in DCmdParser::add_dcmd_option(GenDCmdArgument*) src/hotspot/share/services/diagnosticFramework.cpp:165
          #7 0x7fcbcd4123ba in DCmdFactoryImpl<NMTDCmd>::create_resource_instance(outputStream*) const src/hotspot/share/services/diagnosticFramework.hpp:418
          #8 0x7fcbcbfad5d2 in DCmd::parse_and_execute(DCmdSource, outputStream*, char const*, char, JavaThread*) src/hotspot/share/services/diagnosticFramework.cpp:405
          #9 0x7fcbcb51604e in jcmd src/hotspot/share/services/attachListener.cpp:203
          #10 0x7fcbcb518abe in attach_listener_thread_entry src/hotspot/share/services/attachListener.cpp:427
          #11 0x7fcbcb518abe in attach_listener_thread_entry src/hotspot/share/services/attachListener.cpp:377
          #12 0x7fcbcc7b81e8 in JavaThread::thread_main_inner() src/hotspot/share/runtime/javaThread.cpp:710
          #13 0x7fcbcc7b861f in JavaThread::thread_main_inner() src/hotspot/share/runtime/javaThread.cpp:689
          #14 0x7fcbcc7b861f in JavaThread::run() src/hotspot/share/runtime/javaThread.cpp:695
          #15 0x7fcbce0639e5 in Thread::call_run() src/hotspot/share/runtime/thread.cpp:224
          #16 0x7fcbcd6c753f in thread_native_entry src/hotspot/os/linux/os_linux.cpp:740
          #17 0x7fcbd0ea7fd3 in start_thread nptl/pthread_create.c:442

            Assignee:
            David Holmes
            Reporter:
            Justin King
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: