8303070: Memory leak in DCmdArgument<char*>::parse_value